crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc3_super_mario_bros_3.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-004-MMC3/Super Mario Bros. 3.nes
rom_sha256=ef6b74c29dd297e4afa2a46b8543cc5071f6f98ef0c734cf989e9cd183f7f3b9
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=806e2d2699b0a7b7
