crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc3_tiny_toon_adventures_2.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-004-MMC3/Tiny Toon Adventures 2 - Trouble in Wackyland.nes
rom_sha256=d539a6d617a3b771e4616f6331ea522ee061cbaf39def993c54024a04e8bf9ef
frames=3901
fb_bytes=245760
cycles=116143958
audio_samples=2861769
audio_fnv1a64=590a39d1799bc533
checkpoint f3661 fb_fnv1a64=f29a540dd6f8766f
checkpoint f3901 fb_fnv1a64=d3114f01ba78d6da
