crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc3_tmnt3.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-004-MMC3/Teenage Mutant Ninja Turtles III - The Manhattan Project.nes
rom_sha256=650635c47203e6696f088f149a16c00287c65b9e15e3bc7c9ad2f38e96076d8b
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=b126a73433c9367d
checkpoint f600 fb_fnv1a64=0352dbaffd4c23c9
