crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc4_fire_emblem.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-010-MMC4/Fire Emblem - Ankoku Ryuu to Hikari no Tsurugi (Japan) (En) (1.0) (Official names).nes
rom_sha256=626d9c3944f8787d4048e7e47f830decd117bc89d4ca567603fd8220ee6d9991
frames=600
fb_bytes=245760
cycles=17838526
audio_samples=439524
audio_fnv1a64=4f5ef2d109ed9208
checkpoint f600 fb_fnv1a64=28331e0f69dc3576
