crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc5_uchuu_keibitai_sdf.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-005-MMC5/Uchuu Keibitai SDF (Japan).nes
rom_sha256=7ca1cfd76c6c42e40c1997294abbbb89a13a7b1f4d363c6be14cfee49f59e484
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=1ec544fcca1eee29
checkpoint f600 fb_fnv1a64=e92577ce853d78bc
