crates/rustynes-test-harness/tests/snapshots/external_real_games__external_namco163_famista_90.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-019-Namco163/Famista '90 (Japan) (En) (0.91).nes
rom_sha256=1861c5bf1ef28704e261bd1fc29634ca389bca76f53d05f5407543f3d2e0905d
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=53493e63a95c8a4b
checkpoint f600 fb_fnv1a64=34c46f2158917b2d
