crates/rustynes-test-harness/tests/snapshots/external_real_games__external_namco163_final_lap.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-019-Namco163/Final Lap (Japan).nes
rom_sha256=6f24032b9d97286f9f44f06052bc610aebac23d05ed261012fab91fa491c8766
frames=600
fb_bytes=245760
cycles=17838520
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=d4ba89bf870431e1
